[BEAM-10961] (1) fix spacing (2) add reference to BEAM-11761

--- a/sdks/java/io/kinesis/expansion-service/build.gradle
+++ b/sdks/java/io/kinesis/expansion-service/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'application'
 mainClassName = "org.apache.beam.sdk.expansion.service.ExpansionService"
 
 applyJavaNature(
-    enableStrictDependencies:true,
+    enableStrictDependencies: true,
     automaticModuleName: 'org.apache.beam.sdk.io.kinesis.expansion.service',
     exportJavadoc: false,
     validateShadowJar: false,
@@ -33,8 +33,8 @@ ext.summary = "Expansion service serving KinesisIO"
 
 dependencies {
   compile project(":sdks:java:expansion-service")
-  permitUnusedDeclared project(":sdks:java:expansion-service")
+  permitUnusedDeclared project(":sdks:java:expansion-service") // BEAM-11761
   compile project(":sdks:java:io:kinesis")
-  permitUnusedDeclared project(":sdks:java:io:kinesis")
+  permitUnusedDeclared project(":sdks:java:io:kinesis") // BEAM-11761
   runtime library.java.slf4j_jdk14
 }
