--- a/sdks/java/io/hcatalog/build.gradle
+++ b/sdks/java/io/hcatalog/build.gradle
@@ -19,7 +19,7 @@
 import java.util.stream.Collectors
 
 plugins { id 'org.apache.beam.module' }
-applyJavaNature(enableStrictDependencies:true,automaticModuleName: 'org.apache.beam.sdk.io.hcatalog')
+applyJavaNature(enableStrictDependencies: true, automaticModuleName: 'org.apache.beam.sdk.io.hcatalog')
 
 description = "Apache Beam :: SDKs :: Java :: IO :: HCatalog"
 ext.summary = "IO to read and write for HCatalog source."
@@ -66,6 +66,8 @@ dependencies {
   provided library.java.hadoop_common
   provided "org.apache.hive:hive-exec:$hive_version"
   provided(group: "org.apache.hive.hcatalog", name: "hive-hcatalog-core", version: hive_version) {
+    exclude group: "org.apache.hive", module: "hive-exec"
+    exclude group: "com.google.protobuf", module: "protobuf-java"
   }
   testCompile project(":sdks:java:io:common").sourceSets.test.output
   testCompile library.java.commons_io
