--- a/sdks/java/io/splunk/build.gradle
+++ b/sdks/java/io/splunk/build.gradle
@@ -19,18 +19,24 @@
 plugins {
     id 'org.apache.beam.module'
 }
-applyJavaNature(automaticModuleName: 'org.apache.beam.sdk.io.splunk')
+applyJavaNature(enableStrictDependencies: true, automaticModuleName: 'org.apache.beam.sdk.io.splunk')
 
 description = "Apache Beam :: SDKs :: Java :: IO :: Splunk"
 ext.summary = "IO to write events to Splunk Http Event Collector (HEC)"
 
 dependencies {
     compile platform(library.java.google_cloud_platform_libraries_bom)
-    compile library.java.slf4j_api
+    compile project(path: ":sdks:java:core", configuration: "shadow")
     compile library.java.google_api_client
+    permitUnusedDeclared library.java.google_api_client // BEAM-11761
     compile library.java.google_http_client_apache_v2
     compile library.java.google_code_gson
-    compile project(path: ":sdks:java:core", configuration: "shadow")
+    compile library.java.google_http_client
+    compile library.java.http_client
+    compile library.java.http_core
+    compile library.java.joda_time
+    compile library.java.slf4j_api
+    compile library.java.vendored_guava_26_0_jre
     testCompile library.java.junit
     testCompile group: 'org.mock-server', name: 'mockserver-junit-rule', version: '5.10.0'
     testCompile group: 'org.mock-server', name: 'mockserver-client-java', version: '5.10.0'
