--- a/sdks/java/io/thrift/build.gradle
+++ b/sdks/java/io/thrift/build.gradle
@@ -21,6 +21,7 @@ plugins {
     // id "org.jruyi.thrift" version "0.4.1"
 }
 applyJavaNature(
+        enableStrictDependencies: true,
         automaticModuleName: 'org.apache.beam.sdk.io.thrift',
         generatedClassPatterns: [
                 /^org\.apache\.beam\.sdk\.io\.thrift\.payloads.*/,
@@ -40,11 +41,6 @@ dependencies {
     compile "org.apache.thrift:libthrift:0.13.0"
     compile project(path: ":sdks:java:core", configuration: "shadow")
     testCompile library.java.junit
-    testCompile library.java.hamcrest_core
-    testCompile library.java.hamcrest_library
-    testCompile library.java.jackson_databind
-    testCompile "com.google.code.gson:gson:2.8.6"
-    testCompile "commons-io:commons-io:2.6"
     testRuntimeOnly library.java.slf4j_jdk14
     testRuntimeOnly project(path: ":runners:direct-java", configuration: "shadow")
 }
