--- a/sdks/java/io/xml/build.gradle
+++ b/sdks/java/io/xml/build.gradle
@@ -17,7 +17,7 @@
  */
 
 plugins { id 'org.apache.beam.module' }
-applyJavaNature(automaticModuleName: 'org.apache.beam.sdk.io.xml')
+applyJavaNature(enableStrictDependencies:true,automaticModuleName: 'org.apache.beam.sdk.io.xml')
 
 description = "Apache Beam :: SDKs :: Java :: IO :: XML"
 ext.summary = "IO to read and write XML files."
@@ -25,14 +25,15 @@ ext.summary = "IO to read and write XML files."
 dependencies {
   compile library.java.jaxb_api
   compile library.java.jaxb_impl
+  permitUnusedDeclared library.java.jaxb_impl // BEAM-11761
   compile library.java.vendored_guava_26_0_jre
   compile project(path: ":sdks:java:core", configuration: "shadow")
   compile library.java.stax2_api
+  compile "javax.xml.stream:stax-api:1.0-2"
   compile library.java.woodstox_core_asl
+  permitUnusedDeclared library.java.woodstox_core_asl // BEAM-11761
   testCompile project(path: ":sdks:java:core", configuration: "shadowTest")
   testCompile library.java.junit
-  testCompile library.java.hamcrest_core
-  testCompile library.java.hamcrest_library
   testRuntimeOnly library.java.slf4j_jdk14
   testRuntimeOnly project(path: ":runners:direct-java", configuration: "shadow")
 }
