--- a/sdks/java/io/parquet/build.gradle
+++ b/sdks/java/io/parquet/build.gradle
@@ -44,10 +44,10 @@ dependencies {
   compile project(":sdks:java:io:hadoop-common")
   compile library.java.slf4j_api
   compile "org.apache.parquet:parquet-avro:$parquet_version"
+  compile "org.apache.parquet:parquet-column:$parquet_version"
   compile "org.apache.parquet:parquet-common:$parquet_version"
   compile "org.apache.parquet:parquet-hadoop:$parquet_version"
   compile library.java.avro
-  compile "org.apache.parquet:parquet-column:1.10.0"
   provided library.java.hadoop_client
   testCompile project(path: ":sdks:java:core", configuration: "shadowTest")
   testCompile library.java.junit
