[BEAM-10961] (1) add reference to BEAM-11761 (2) fix spacing (3) permitUnusedDeclared library.java.proto_google_cloud_bigquerybeta2_storage_v1

--- a/sdks/java/io/google-cloud-platform/build.gradle
+++ b/sdks/java/io/google-cloud-platform/build.gradle
@@ -20,7 +20,7 @@ import groovy.json.JsonOutput
 
 plugins { id 'org.apache.beam.module' }
 applyJavaNature(
-  enableStrictDependencies:true,
+  enableStrictDependencies: true,
   automaticModuleName: 'org.apache.beam.sdk.io.gcp',
   enableSpotbugs: false,
 )
@@ -102,6 +102,7 @@ dependencies {
   compile library.java.proto_google_cloud_bigquery_storage_v1beta1
   permitUnusedDeclared library.java.proto_google_cloud_bigquery_storage_v1beta1 // BEAM-11761
   compile library.java.proto_google_cloud_bigquerybeta2_storage_v1
+  permitUnusedDeclared library.java.proto_google_cloud_bigquerybeta2_storage_v1 // BEAM-11761
   compile library.java.proto_google_cloud_bigtable_admin_v2
   compile library.java.proto_google_cloud_bigtable_v2
   compile library.java.proto_google_cloud_datastore_v1
