--- a/sdks/java/extensions/sql/zetasql/build.gradle
+++ b/sdks/java/extensions/sql/zetasql/build.gradle
@@ -42,7 +42,7 @@ dependencies {
   compile library.java.joda_time
   compile library.java.protobuf_java
   compile library.java.protobuf_java_util
-  permitUnusedDeclared library.java.protobuf_java_util
+  permitUnusedDeclared library.java.protobuf_java_util // BEAM-11761
   compile library.java.slf4j_api
   compile library.java.vendored_guava_26_0_jre
   compile library.java.proto_google_common_protos // Interfaces with ZetaSQL use this
