[BEAM-10961] enable strict dependency checking for sdks/java/extensions/schemaio-expansion-service

--- a/sdks/java/extensions/schemaio-expansion-service/build.gradle
+++ b/sdks/java/extensions/schemaio-expansion-service/build.gradle
@@ -31,11 +31,15 @@ applyJavaNature(
 
 dependencies {
     compile project(path: ":sdks:java:expansion-service")
+    permitUnusedDeclared project(path: ":sdks:java:expansion-service")
     compile project(":sdks:java:io:jdbc")
+    permitUnusedDeclared project(":sdks:java:io:jdbc")
     compile library.java.postgres
+    permitUnusedDeclared library.java.postgres
+    compile project(path: ":model:pipeline", configuration: "shadow")
+    compile project(path: ":sdks:java:core", configuration: "shadow")
+    compile library.java.vendored_grpc_1_26_0
+    compile library.java.vendored_guava_26_0_jre
     testCompile library.java.junit
-    testCompile library.java.powermock_mockito
     testCompile library.java.mockito_core
-    // TODO(BEAM-10632): remove this dependency
-    testCompile "org.checkerframework:checker-qual:3.10.0"
 }
