--- a/sdks/java/extensions/euphoria/build.gradle
+++ b/sdks/java/extensions/euphoria/build.gradle
@@ -18,7 +18,6 @@
 
 plugins { id 'org.apache.beam.module' }
 applyJavaNature(
-  enableStrictDependencies: true,
   exportJavadoc: false,
   automaticModuleName: 'org.apache.beam.sdk.extensions.euphoria',
 )
@@ -27,10 +26,7 @@ description = "Apache Beam :: SDKs :: Java :: Extensions :: Euphoria Java 8 DSL"
 
 dependencies {
   compile project(path: ":sdks:java:core", configuration: "shadow")
-  compile library.java.jackson_annotations
-  compile library.java.joda_time
-  compile library.java.slf4j_api
-  compile library.java.vendored_guava_26_0_jre
+  testCompile library.java.mockito_core
   testCompile project(":sdks:java:extensions:kryo")
   testCompile library.java.slf4j_api
   testCompile library.java.hamcrest_core
