--- a/sdks/python/test-suites/portable/common.gradle
+++ b/sdks/python/test-suites/portable/common.gradle
@@ -268,3 +268,13 @@ task testPipelineJarFlinkRunner() {
   dependsOn testUberJarFlinkRunner
   dependsOn testUberJarFlinkRunnerSaveMainSession
 }
+
+task validatesContainer() {
+  def runScriptsPath = "${rootDir}/sdks/python/container/run_validatescontainer.sh"
+  doLast {
+    exec {
+      executable 'sh'
+      args '-c', "cd ${rootDir} && ${runScriptsPath} python${project.ext.pythonVersion.replace('.', '')}"
+    }
+  }
+}
