Move docker task into dependencies to resolve conflict

--- a/sdks/python/test-suites/dataflow/common.gradle
+++ b/sdks/python/test-suites/dataflow/common.gradle
@@ -239,13 +239,17 @@ task chicagoTaxiExample {
 }
 
 task validatesContainer() {
+  def pyversion = "${project.ext.pythonVersion.replace('.', '')}"
   dependsOn 'installGcpTest'
   dependsOn ':sdks:python:sdist'
+  dependsOn ":sdks:python:container:py${pyversion}:docker"
   def runScriptsPath = "${rootDir}/sdks/python/container/run_validatescontainer.sh"
   doLast {
     exec {
       executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && cd ${rootDir} && ${runScriptsPath} python${project.ext.pythonVersion.replace('.', '')} ${files(configurations.distTarBall.files).singleFile}"
+      args '-c', ". ${envdir}/bin/activate && cd ${rootDir} && ${runScriptsPath} " +
+              "python${pyversion} " +
+              "${files(configurations.distTarBall.files).singleFile}"
     }
   }
 }
