--- a/sdks/java/maven-archetypes/examples/build.gradle
+++ b/sdks/java/maven-archetypes/examples/build.gradle
@@ -17,7 +17,7 @@
  */
 
 plugins { id 'org.apache.beam.module' }
-applyJavaNature(enableStrictDependencies: false, exportJavadoc: false, automaticModuleName: 'org.apache.beam.maven.archetypes.examples')
+applyJavaNature(exportJavadoc: false, automaticModuleName: 'org.apache.beam.maven.archetypes.examples')
 
 description = "Apache Beam :: SDKs :: Java :: Maven Archetypes :: Examples"
 ext.summary = """A Maven Archetype to create a project containing all the
@@ -78,4 +78,5 @@ sourceSets {
 
 dependencies {
   compile project(":examples:java")
+  permitUnusedDeclared project(":examples:java") // BEAM-11761
 }
