--- a/sdks/java/maven-archetypes/starter/build.gradle
+++ b/sdks/java/maven-archetypes/starter/build.gradle
@@ -17,7 +17,7 @@
  */
 
 plugins { id 'org.apache.beam.module' }
-applyJavaNature(enableStrictDependencies: false, exportJavadoc: false, automaticModuleName: 'org.apache.beam.maven.archetypes.starter')
+applyJavaNature(exportJavadoc: false, automaticModuleName: 'org.apache.beam.maven.archetypes.starter')
 
 description = "Apache Beam :: SDKs :: Java :: Maven Archetypes :: Starter"
 ext.summary = """A Maven archetype to create a simple starter pipeline to
@@ -34,5 +34,7 @@ processResources {
 
 dependencies {
   compile project(path: ":runners:direct-java", configuration: "shadow")
+  permitUnusedDeclared project(":runners:direct-java") // BEAM-11761
   compile project(path: ":sdks:java:core", configuration: "shadow")
+  permitUnusedDeclared project(":sdks:java:core") // BEAM-11761
 }
