--- a/gradle.properties
+++ b/gradle.properties
@@ -25,7 +25,7 @@ signing.gnupg.executable=gpg
 signing.gnupg.useLegacyGpg=true
 
 version=2.29.0-SNAPSHOT
-sdk_version=2.29.0.dev
+sdk_version=2.29.0
 
 javaVersion=1.8
 
