--- a/.test-infra/kubernetes/influxdb/influxdb.yml
+++ b/.test-infra/kubernetes/influxdb/influxdb.yml
@@ -18,7 +18,7 @@ kind: Secret
 metadata:
   name: influxdb-creds
 data:
-  INFLUXDB_USER: c3VwZXJzYWRtaW4=
+  INFLUXDB_USER: c3VwZXJhZG1pbgo=
   INFLUXDB_USER_PASSWORD: c3VwZXJzZWNyZXRwYXNzd29yZA==
   INFLUXDB_GRAPHITE_ENABLED: dHJ1ZQ==
 
