--- a/runners/spark/spark_runner.gradle
+++ b/runners/spark/spark_runner.gradle
@@ -21,7 +21,9 @@ import java.util.stream.Collectors
 
 apply plugin: 'org.apache.beam.module'
 applyJavaNature(
+  enableStrictDependencies:true,
   automaticModuleName: 'org.apache.beam.runners.spark',
+  archivesBaseName: (project.hasProperty('archives_base_name') ? archives_base_name : archivesBaseName),
   classesTriggerCheckerBugs: [
     'SparkAssignWindowFn': 'https://github.com/typetools/checker-framework/issues/3793',
     'SparkCombineFn': 'https://github.com/typetools/checker-framework/issues/3793',
