--- a/runners/core-java/build.gradle
+++ b/runners/core-java/build.gradle
@@ -50,6 +50,7 @@ dependencies {
   compile library.java.slf4j_api
   testCompile project(path: ":sdks:java:core", configuration: "shadowTest")
   testCompile library.java.junit
+  testCompile library.java.junit5
   testCompile library.java.mockito_core
   testCompile library.java.slf4j_api
   testRuntimeOnly library.java.slf4j_simple
