--- a/.test-infra/validate-runner/src/main/resources/configuration.yaml
+++ b/.test-infra/validate-runner/src/main/resources/configuration.yaml
@@ -16,6 +16,7 @@
 batch:
   - flink: beam_PostCommit_Java_PVR_Flink_Batch
   - spark: beam_PostCommit_Java_PVR_Spark_Batch
+  - dataflow: beam_PostCommit_Java_VR_Dataflow_V2
 stream:
   - flink: beam_PostCommit_Java_PVR_Flink_Streaming
 server: https://ci-beam.apache.org/
