--- a/sdks/python/mypy.ini
+++ b/sdks/python/mypy.ini
@@ -65,6 +65,9 @@ ignore_errors = true
 [mypy-apache_beam.io.*]
 ignore_errors = true
 
+[mypy-apache_beam.io.iobase]
+ignore_errors = false
+
 [mypy-apache_beam.ml.gcp.*]
 ignore_errors = true
 
