--- a/sdks/go/test/build.gradle
+++ b/sdks/go/test/build.gradle
@@ -50,10 +50,9 @@ golang {
   }
 }
 
-// ValidatesRunner tests for Dataflow using an updated framework that supports
-// cross-language tests.
-// TODO(BEAM-11415): Merge this into existing ValidatesRunner gradle rules.
-task dataflowXlangValidatesRunner() {
+// ValidatesRunner tests for Dataflow. Runs tests in the integration directory
+// with Dataflow to validate that the runner behaves as expected.
+task dataflowValidatesRunner() {
   dependsOn ":sdks:go:test:goBuild"
   dependsOn ":runners:google-cloud-dataflow-java:worker:shadowJar"
   dependsOn ":sdks:java:testing:expansion-service:buildTestExpansionServiceJar"
@@ -71,10 +70,9 @@ task dataflowXlangValidatesRunner() {
   }
 }
 
-// ValidatesRunner tests for Flink using an updated framework that supports
-// cross-language tests.
-// TODO(BEAM-11415): Merge this into existing ValidatesRunner gradle rules.
-task flinkXlangValidatesRunner {
+// ValidatesRunner tests for Flink. Runs tests in the integration directory
+// with Flink to validate that the runner behaves as expected.
+task flinkValidatesRunner {
   dependsOn ":sdks:go:test:goBuild"
   dependsOn ":sdks:go:container:docker"
   dependsOn ":runners:flink:${project.ext.latestFlinkVersion}:job-server:shadowJar"
@@ -92,10 +90,9 @@ task flinkXlangValidatesRunner {
   }
 }
 
-// ValidatesRunner tests for Spark using an updated framework that supports
-// cross-language tests.
-// TODO(BEAM-11415): Merge this into existing ValidatesRunner gradle rules.
-task sparkXlangValidatesRunner {
+// ValidatesRunner tests for Spark. Runs tests in the integration directory
+// with Spark to validate that the runner behaves as expected.
+task sparkValidatesRunner {
   dependsOn ":sdks:go:test:goBuild"
   dependsOn ":runners:spark:2:job-server:shadowJar"
   dependsOn ":sdks:java:testing:expansion-service:buildTestExpansionServiceJar"
@@ -112,10 +109,14 @@ task sparkXlangValidatesRunner {
   }
 }
 
-// ValidatesRunner tests for the Python Portable runner (aka. ULR) using an
-// updated framework that supports cross-language tests.
-// TODO(BEAM-11415): Merge this into existing ValidatesRunner gradle rules.
-task ulrXlangValidatesRunner {
+// ValidatesRunner tests for the Python Portable runner (aka. ULR). Runs tests
+// in the integration directory with the ULR to validate that the runner behaves
+// as expected.
+//
+// The ULR can exhibit strange behavior when containers are built with outdated
+// vendored directories. For best results use the clean task, like so:
+//   ./gradlew clean :sdks:go:test:ulrValidatesRunner
+task ulrValidatesRunner {
   dependsOn ":sdks:go:test:goBuild"
   dependsOn ":sdks:go:container:docker"
   dependsOn ":sdks:java:container:java11:docker"
@@ -139,7 +140,10 @@ task ulrXlangValidatesRunner {
   }
 }
 
-task ulrXlangValidatesRunnerJenkins {
+// A slightly modified version of the normal ulrValidatesRunner task, this
+// one passes in an extra flag to the script so it is configured to run on
+// Jenkins.
+task ulrValidatesRunnerJenkins {
   dependsOn ":sdks:go:test:goBuild"
   dependsOn ":sdks:go:container:docker"
   dependsOn ":sdks:java:container:java11:docker"
@@ -163,58 +167,3 @@ task ulrXlangValidatesRunnerJenkins {
     }
   }
 }
-
-task flinkValidatesRunner {
-  dependsOn ":sdks:go:test:goBuild"
-  dependsOn ":runners:flink:${project.ext.latestFlinkVersion}:job-server:shadowJar"
-  doLast {
-    def options = [
-            "--runner flink",
-            "--parallel 1", // prevent memory overuse
-            "--flink_job_server_jar ${project(":runners:flink:${project.ext.latestFlinkVersion}:job-server").shadowJar.archivePath}",
-    ]
-    exec {
-      executable "sh"
-      args "-c", "./run_integration_tests.sh ${options.join(' ')}"
-    }
-  }
-}
-
-task sparkValidatesRunner {
-  dependsOn ":sdks:go:test:goBuild"
-  dependsOn ":runners:spark:2:job-server:shadowJar"
-  doLast {
-    def options = [
-            "--runner spark",
-            "--parallel 1", // prevent memory overuse
-            "--spark_job_server_jar ${project(":runners:spark:2:job-server").shadowJar.archivePath}",
-    ]
-    exec {
-      executable "sh"
-      args "-c", "./run_integration_tests.sh ${options.join(' ')}"
-    }
-  }
-}
-
-
-task ulrValidatesRunner {
-  dependsOn ":sdks:go:test:goBuild"
-  dependsOn ":sdks:go:container:docker"
-  dependsOn "setupVirtualenv"
-  dependsOn ":sdks:python:buildPython"
-  doLast {
-    def options = [
-            "--runner universal",
-    ]
-    exec {
-      executable "sh"
-      workingDir "${project.rootDir}/sdks/python"
-      args "-c", ". ${envdir}/bin/activate && pip install -e ."
-    }
-    exec {
-      executable "sh"
-      args "-c", ". ${envdir}/bin/activate && ./run_integration_tests.sh ${options.join(' ')}"
-    }
-  }
-}
-
