--- a/runners/google-cloud-dataflow-java/build.gradle
+++ b/runners/google-cloud-dataflow-java/build.gradle
@@ -309,8 +309,10 @@ task validatesRunnerStreaming {
     name: 'validatesRunnerLegacyWorkerTestStreaming',
     pipelineOptions: legacyPipelineOptions + ['--streaming=true'],
     excludedCategories: [
+      'org.apache.beam.sdk.testing.UsesMapState',
       'org.apache.beam.sdk.testing.UsesRequiresTimeSortedInput',
-      'org.apache.beam.sdk.testing.UsesStrictTimerOrdering'
+      'org.apache.beam.sdk.testing.UsesSetState',
+      'org.apache.beam.sdk.testing.UsesStrictTimerOrdering',
     ],
     excludedTests: [
       'org.apache.beam.sdk.metrics.MetricsTest$CommittedMetricTests'
