mavenLocal for sdks:java:testing:tpcds

--- a/sdks/java/testing/tpcds/build.gradle
+++ b/sdks/java/testing/tpcds/build.gradle
@@ -28,6 +28,8 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    // Maven local is not needed. Just for vendored gRPC testing
+    mavenLocal()
 }
 
 dependencies {
