--- a/sdks/go/examples/build.gradle
+++ b/sdks/go/examples/build.gradle
@@ -78,6 +78,7 @@ golang {
   }
 }
 
+// Run this task to validate the Go environment setup for contributors
 task wordCount(type: com.github.blindpirate.gogradle.Go) {
   dependsOn goVendor
   go 'build -o ./build/bin/${GOOS}_${GOARCH}/wordcount github.com/apache/beam/sdks/go/examples/wordcount'
