--- a/sdks/python/build.gradle
+++ b/sdks/python/build.gradle
@@ -111,6 +111,7 @@ task startPortableRunner {
   }
 }
 
+// Run this task to validate the python environment setup for contributors
 task wordCount {
   dependsOn 'buildPython'
   doLast {
