--- a/sdks/go/examples/build.gradle
+++ b/sdks/go/examples/build.gradle
@@ -80,6 +80,7 @@ golang {
 
 // Run this task to validate the Go environment setup for contributors
 task wordCount(type: com.github.blindpirate.gogradle.Go) {
+  description "Run the Go word count example"
   dependsOn goVendor
   go 'build -o ./build/bin/${GOOS}_${GOARCH}/wordcount github.com/apache/beam/sdks/go/examples/wordcount'
 }
