--- a/sdks/python/build.gradle
+++ b/sdks/python/build.gradle
@@ -113,6 +113,7 @@ task startPortableRunner {
 
 // Run this task to validate the python environment setup for contributors
 task wordCount {
+  description "Run the Python word count example"
   dependsOn 'buildPython'
   doLast {
     exec {
